--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,5 @@
     background-color: #ededed;
     height: 90vh;
     width: 90vw;
-    box-shadow: -10x 2px 20px -6px rgba(0, 0, 0, 0.75);
+    box-shadow: -10px 2px 20px -6px rgba(0, 0, 0, 0.75);
 }
